# saas-boilerplate

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/docs/: AUTHORIZATION.md  CACHING.md  EXTENSIONS.md  FEATURE_FLAGS.md  GETTING_STARTED.md  JOBS.md  NOTIFICATIONS.md  RESILIENCE.md  STORAGE.md  TIMESTAMPS.md
apps/api/docs/extensions/: ANALYTICS.md  WORKFLOWS.md
apps/api/examples/: auth_test_routes.py  feature_flag_routes.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 7f635a97c1d3_initial.py  a1b2c3d4e5f6_add_notifications.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/dependencies/: auth.py  database.py  permissions.py  services.py
apps/api/src/api/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
apps/api/src/api/routes/: __init__.py  api_keys.py  audit_logs.py  auth.py  features.py  notifications.py  orgs.py  projects.py  users.py  webhooks.py
apps/api/src/core/: config.py  container.py
apps/api/src/core/auth/: __init__.py  decorators.py  dependencies.py  interfaces.py  registry.py  service.py
apps/api/src/core/features/: __init__.py  decorators.py  dependencies.py  (+3 more)
apps/api/src/implementations/: __init__.py  register.py
apps/api/src/models/: __init__.py  api_key.py  audit_log.py  base.py  database.py  notification.py  org.py  project.py  user.py  webhook.py
apps/api/src/repositories/: __init__.py  base.py
apps/api/src/schemas/: api_key.py  audit_log.py  auth.py  org.py  project.py  user.py  webhook.py
apps/api/src/services/: api_key.py  audit.py  auth.py  org.py  permission.py  project.py  user.py  webhook.py
apps/api/src/utils/: __init__.py  caching.py  context.py  health.py  idempotency.py  jobs.py  notifications.py  pagination.py  storage.py  timezone.py
apps/api/tests/: conftest.py  test_auth.py  test_users.py
apps/worker/: .env.example  Dockerfile  pyproject.toml
apps/worker/src/: __init__.py  celery_app.py  config.py
apps/worker/src/schedules/: __init__.py
apps/worker/src/tasks/: email.py  scheduled.py  webhooks.py
(+87 files in other folders)
